[gd_scene load_steps=9 format=2]

[ext_resource path="res://entities/alien/ai.gd" type="Script" id=1]
[ext_resource path="res://entities/alien/alien_repository.gd" type="Script" id=2]
[ext_resource path="res://entities/alien/alien.tscn" type="PackedScene" id=3]
[ext_resource path="res://particles/death/death.tscn" type="PackedScene" id=4]
[ext_resource path="res://audio/sfx/damage.wav" type="AudioStream" id=5]

[sub_resource type="BoxShape" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 17.3628, 1.9938, 15.6717 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 35, 5.15797, 35.5261 )

[node name="ai" type="KinematicBody" groups=[
"enemy",
"is_hitable",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.00577, 0, -30.9528 )
input_ray_pickable = false
collision_mask = 0
script = ExtResource( 1 )
sfx_hurt_path = NodePath("hurt")

[node name="alien_repository" type="Spatial" parent="."]
script = ExtResource( 2 )
ai_path = NodePath("..")
alien_repository_paths = [ NodePath("alien") ]

[node name="alien" parent="alien_repository" instance=ExtResource( 3 )]
host_path = NodePath("../..")
death_particles = ExtResource( 4 )
health = 3

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="attack_range" type="Area" parent="."]
editor/display_folded = true

[node name="CollisionShape" type="CollisionShape" parent="attack_range"]
shape = SubResource( 2 )

[node name="attraction_range" type="Area" parent="."]
editor/display_folded = true

[node name="CollisionShape" type="CollisionShape" parent="attraction_range"]
shape = SubResource( 3 )

[node name="too_close_range" type="Area" parent="."]
editor/display_folded = true

[node name="CollisionShape" type="CollisionShape" parent="too_close_range"]
shape = SubResource( 2 )

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="body_entered" from="attack_range" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="attack_range" to="." method="_on_attack_range_body_exited"]
[connection signal="body_entered" from="attraction_range" to="." method="_on_attraction_range_body_entered"]
[connection signal="body_exited" from="attraction_range" to="." method="_on_attraction_range_body_exited"]
[connection signal="body_entered" from="too_close_range" to="." method="_on_too_close_range_body_entered"]
[connection signal="body_exited" from="too_close_range" to="." method="_on_too_close_range_body_exited"]
